<resources>
    <string name="app_name">BanknoteIndentifier</string>
    <string name="name_app">Banknote Identifier</string>
    <string name="next">NEXT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboar">What kind of stones attract you most?</string>
    <string name="know_what_s_in_your_pocket">Know what\'s in your pocket</string>
    <string name="tap_here_to_recognize_a_collections">Tap here to recognize a collections</string>
    <string name="recent_banknote">Recent Banknote</string>
    <string name="random_banknote">Random Banknote</string>
    <string name="collection">Collection</string>
    <string name="home">Home</string>
    <string name="price_to_price">$ %d-%d</string>
    <string name="search_banknotes">Search banknote</string>
    <string name="detail_title">United states of america -USA 100 Dollar Banknote, 2017</string>
    <string name="todo">TODO</string>
    <string name="reference_price">Reference Price</string>
    <string name="physical_features">Physical features</string>
    <string name="description">Description</string>
    <string name="lettering">Lettering</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="not_yet_released">Not yet released</string>
    <string name="remove_collection">Remove from Collection</string>
    <string name="search">Search</string>
    <string name="no_data">No data</string>
    <string name="banknote">Banknote</string>
    <string name="paper_bills_collectible_notes">Paper bills collectible notes</string>
    <string name="modern_old_coins"><![CDATA[Modern & old coins]]></string>
    <string name="coin">Coin</string>
    <string name="both">Both</string>
    <string name="i_collect_everything">I collect everything.</string>
    <string name="what_do_you_want_to_use_the_app_for">What do you want to use the app for?</string>
    <string name="identify_banknotes">Identify banknotes</string>
    <string name="check_collector_value">Check collector value</string>
    <string name="focus_on_history_origin"><![CDATA[Focus on history & origin]]></string>
    <string name="focus_on_collector_value">Focus on collector value</string>
    <string name="full_detailed_info">Full detailed info</string>
    <string name="simple_easy_to_read"><![CDATA[Simple & easy to read]]></string>
    <string name="how_do_you_prefer_your_results_displayed">How do you prefer your results displayed?</string>
    <string name="learn_about_currencies">Learn about currencies</string>
</resources>