<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/ToolbarTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/diem_16"
            android:paddingVertical="@dimen/diem_16"
            android:text="@string/name_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/diem_16"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/radius_16"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:strokeWidth="0dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingVertical="@dimen/diem_8"
                android:theme="@style/SearchTheme"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/search_banknotes"
                app:searchIcon="@drawable/ic_search_24dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/diem_16"
            app:cardBackgroundColor="@color/color_primary_secondary"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvSearch"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="@dimen/diem_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/diem_8"
                    android:src="@drawable/img_dollars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/know_what_s_in_your_pocket"
                    android:theme="@style/bodyLargeSemiBold.PrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_here_to_recognize_a_collections"
                    android:theme="@style/bodyMediumRegular.PrimaryDark" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvTitleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/diem_16"
            android:layout_marginTop="@dimen/diem_16"
            android:text="@string/recent_banknote"
            android:theme="@style/bodyLargeSemiBold"
            app:layout_constraintTop_toBottomOf="@+id/cvBanner"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecentBanknote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/diem_16"
            android:layout_marginTop="@dimen/diem_8"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTwo" />

        <TextView
            android:id="@+id/tvTitleThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/diem_16"
            android:layout_marginTop="@dimen/diem_16"
            android:text="@string/random_banknote"
            android:theme="@style/bodyLargeSemiBold"
            app:layout_constraintTop_toBottomOf="@+id/rvRecentBanknote"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRandomBanknote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/diem_16"
            android:layout_marginTop="@dimen/diem_8"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/diem_24"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleThree" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>