<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/diem_48"
    tools:context=".ui.onboard.fragment.OnBoardFirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/diem_16"
            android:layout_marginTop="@dimen/diem_16"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/diem_24"
            android:text="@string/title_onboar"
            android:textColor="@color/color_primary_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBankNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/diem_16"
            android:background="@drawable/bg_onboard"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <ImageView
                android:id="@+id/imgBanknote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_banknote"
                app:layout_constraintBottom_toBottomOf="@id/llBanknote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/llBanknote" />

            <LinearLayout
                android:id="@+id/llBanknote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/diem_16"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgBanknote"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_semibold"
                    android:text="@string/banknote"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_regular"
                    android:text="@string/paper_bills_collectible_notes"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/diem_16"
            android:background="@drawable/bg_onboard"
            android:padding="@dimen/diem_16"
            app:layout_constraintTop_toBottomOf="@+id/clBankNote">

            <ImageView
                android:id="@+id/imgCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_coin"
                app:layout_constraintBottom_toBottomOf="@id/lllCoin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lllCoin" />

            <LinearLayout
                android:id="@+id/lllCoin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/diem_16"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgCoin"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_semibold"
                    android:text="@string/coin"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_regular"
                    android:text="@string/modern_old_coins"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBoth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/diem_16"
            android:background="@drawable/bg_onboard"
            android:padding="@dimen/diem_16"
            app:layout_constraintTop_toBottomOf="@+id/clCoin">

            <ImageView
                android:id="@+id/imgBoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_both"
                app:layout_constraintBottom_toBottomOf="@id/llBoth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/llBoth" />

            <LinearLayout
                android:id="@+id/llBoth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/diem_16"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgBoth"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_semibold"
                    android:text="@string/both"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_regular"
                    android:text="@string/i_collect_everything"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>