<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.search.SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_24dp"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTitleStyle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/diem_16"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_16"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="@dimen/diem_8"
            android:theme="@style/SearchTheme"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_banknotes"
            app:searchIcon="@drawable/ic_search_24dp" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/llNoData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutLoading"
        app:layout_constraintTop_toBottomOf="@+id/cvSearch"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_nodata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_regular"
            android:text="@string/no_data"
            android:textColor="@color/color_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/diem_8"
        android:paddingBottom="80dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvSearch" />

    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/diem_16"
        android:padding="@dimen/diem_8"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>